--- a/src/_layouts/morea.html
+++ b/src/_layouts/morea.html
@@ -40,6 +40,7 @@
         <li><a href="{{ site.baseurl }}/readings/">Readings</a></li>
         <li><a href="{{ site.baseurl }}/experiences/">Experiences</a></li>
         <li><a href="{{ site.baseurl }}/assessments/">Assessments</a></li>
+        <li><a href="{{ site.baseurl }}/schedule/">Schedule</a></li>
         {% if site.morea_debug == true %}
         <li><a href="{{ site.baseurl }}/debug.html">Debug</a></li>
         {% endif %}
