Fixing bug in layout navbar

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -38,9 +38,9 @@
 	<li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Course Info<b class="caret"></b></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="/morea/010.introduction/reading-course-info.html">Overview</a></li>
-              <li><a href="/morea/010.introduction/reading-policies.html">Policies</a></li>
-              <li><a href="/morea/010.introduction/reading-topic-overview.html">Topics</a></li>
+              <li><a href="{{ site.baseurl }}/morea/010.introduction/reading-course-info.html">Overview</a></li>
+              <li><a href="{{ site.baseurl }}/morea/010.introduction/reading-policies.html">Policies</a></li>
+              <li><a href="{{ site.baseurl }}/morea/010.introduction/reading-topic-overview.html">Topics</a></li>
             </ul>
           </li>
         <li><a href="{{ site.baseurl }}/modules/">Modules</a></li>
